# AgentRoom

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_GO_MVP.md  CLAUDE.md  README.md  deploymentArtifacts.test.mjs  docker-compose.yml  install.ps1
backend/: Dockerfile  README.md  go.mod  go.sum
deepagent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agents.json  deepagent.toml  pyproject.toml
deepagent/src/agent_runtime/: __init__.py  capacity.py  config.py  context.py  events.py  healthcheck.py  model_adapter.py  prompt.py  protocol.py  registry.py  sanitize.py  security.py  server.py  service.py  stream.py  telemetry.py
deepagent/src/agent_runtime/executors/: __init__.py  base.py  deepagent.py  fake.py  llm.py
deepagent/src/agent_runtime/v1/: __init__.py  agent_runtime_pb2.py  agent_runtime_pb2.pyi  agent_runtime_pb2_grpc.py
deepagent/src/agentroom_deepagent/: __init__.py  agent.py  cli.py  config.py  models.py  prompts.py  report.py  research.py  tools.py
deepagent/tests/: integration_llm_server.py  test_agent.py  test_agent_runtime_config.py  test_agent_runtime_contract.py  test_agent_runtime_events.py  test_agent_runtime_security.py  test_agent_runtime_service.py  test_cli.py  test_config.py  test_deepagent_executor.py  test_llm_executor.py  test_prompt_golden.py  test_prompt_transcript_compression.py  test_report.py  test_research.py
docs/: ARCHITECTURE.md  agent-dialogue-phase2.md  agentroom-requirements.md  data-persistence-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+286 files in other folders)
