[project]
name = "agentroom-deepagent"
version = "0.1.0"
description = "Isolated DeepAgents research prototype for AgentRoom."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents",
    "langchain",
    "langchain-anthropic",
    "langchain-openai",
    "python-dotenv",
    "tavily-python",
]

[project.scripts]
deepagent-research = "agentroom_deepagent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
